Add grunt notifications

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt": "~0.4.2",
     "grunt-contrib-sass": "~0.7.2",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-notify": "~0.2.17",
     "grunt-styleguide": "~0.2.15",
     "load-grunt-tasks": "0.3.0"
   }
