--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
+  "name": "Plate",
+  "version": "0.0.1",
+  "repository": {
+    "type" : "git",
+    "url" : "http://github.com/andyra/plate.git"
+  },
   "devDependencies": {
-    "gulp": "~3.6.0",
-    "gulp-rename": "~1.2.0",
-    "tiny-lr": "0.0.5",
-    "gulp-ruby-sass": "~0.4.3",
-    "gulp-uglify": "~0.2.1",
-    "gulp-autoprefixer": "0.0.7",
-    "gulp-notify": "~1.2.5",
-    "gulp-clean": "~0.2.4",
-    "gulp-minify-css": "~0.3.1",
-    "gulp-concat": "~2.2.0",
-    "gulp-jshint": "~1.5.3",
-    "gulp-livereload": "~1.3.1",
-    "gulp-cache": "~0.1.3",
-    "gulp-imagemin": "~0.2.0",
-    "gulp-load-plugins": "~0.5.0",
-    "coffee-script": "~1.7.1"
+    "grunt": "~0.4.2",
+    "grunt-autoprefixer": "~0.7.2",
+    "grunt-contrib-sass": "~0.7.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-notify": "~0.2.17",
+    "load-grunt-tasks": "0.3.0"
   }
 }
