--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-autoprefixer": "~0.7.2",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-livereload": "~0.1.2",
     "grunt-contrib-sass": "~0.7.2",
+    "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-notify": "~0.2.17",
+    "grunt-webfont": "^0.4.7",
     "load-grunt-tasks": "0.3.0"
   }
 }
