--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-autoprefixer": "~0.7.2",
+    "grunt-contrib-coffee": "^0.10.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-livereload": "~0.1.2",
-    "grunt-contrib-sass": "~0.7.2",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-notify": "~0.2.17",
+    "grunt-sass": "^0.14.1",
     "grunt-webfont": "^0.4.7",
-    "load-grunt-tasks": "0.3.0"
+    "load-grunt-tasks": "0.3.0",
+    "node-bourbon": "~1.2.3",
+    "node-neat": "~1.3.0"
   }
 }
