--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
   "name": "Plate",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "http://github.com/andyra/plate.git"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-autoprefixer": "~0.7.2",
-    "grunt-contrib-coffee": "^0.10.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-livereload": "~0.1.2",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-notify": "~0.2.17",
-    "grunt-sass": "^0.14.1",
-    "grunt-svgmin": "^1.0.0",
-    "grunt-svgstore": "^0.3.6",
-    "grunt-webfont": "^0.4.7",
-    "load-grunt-tasks": "0.3.0",
-    "node-bourbon": "~1.2.3",
-    "node-neat": "~1.3.0"
+    "gulp": "^3.8.10",
+    "gulp-coffee": "^2.2.0",
+    "gulp-concat": "^2.4.3",
+    "gulp-livereload": "^3.2.0",
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-sass": "^1.2.4",
+    "gulp-uglify": "^1.0.2",
+    "gulp-util": "^3.0.2",
+    "node-bourbon": "^1.2.3",
+    "node-neat": "^1.4.2"
   }
 }
