--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
-  "name": "Plate",
+  "name": "plate",
+  "title": "Plate",
+  "author": "Andy Smith",
+  "url": "http://github.com/andyra/plate",
   "version": "1.0.0",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "http://github.com/andyra/plate.git"
   },
   "devDependencies": {
-    "gulp": "^3.8.10",
-    "gulp-coffee": "^2.2.0",
-    "gulp-concat": "^2.4.3",
-    "gulp-livereload": "^3.2.0",
-    "gulp-load-plugins": "^0.8.0",
-    "gulp-sass": "^1.2.4",
-    "gulp-uglify": "^1.0.2",
-    "gulp-util": "^3.0.2",
-    "node-bourbon": "^1.2.3",
-    "node-neat": "^1.4.2"
+    "browser-sync": "^2.4.0",
+    "cheerio": "^0.19.0",
+    "gulp": "^3.8.11",
+    "gulp-add-src": "^0.2.0",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-header": "^1.2.2",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-jshint": "^1.9.4",
+    "gulp-minify-css": "^1.0.0",
+    "gulp-order": "^1.1.1",
+    "gulp-print": "^1.1.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-svgmin": "^1.1.1",
+    "gulp-svgstore": "^5.0.0",
+    "gulp-uglify": "^1.1.0",
+    "imagemin-pngquant": "^4.0.0",
+    "node-bourbon": "^4.2.1-beta1",
+    "node-neat": "^1.7.1-beta1"
   }
 }
