--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "http://github.com/andyra/plate.git"
   },
   "devDependencies": {
-    "browser-sync": "^2.4.0",
+    "browser-sync": "^2.5.0",
     "cheerio": "^0.19.0",
     "event-stream": "^3.3.0",
     "gulp": "^3.8.11",
@@ -18,6 +18,7 @@
     "gulp-autoprefixer": "^2.1.0",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.5.2",
+    "gulp-connect": "^2.2.0",
     "gulp-header": "^1.2.2",
     "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.9.4",
